# astralang

./: .gitignore  Approach To Memory Safety.md  CMakeLists.txt  grammar.txt  save.sh
AST/: AstraAST.h
Compiler/: main.cpp  test.astra
Lexer/: AstraLexer.cpp  AstraLexer.h
Lexer&Parser/: AstraLexer.h  AstraParser.cpp  main.cpp
Parser/: AstraParser.h  main.cpp  test.astra
SemanticAnalyzer/: AstraSemanticAnalyzer.h
